--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
   <div class="huluBox">
   <div>
-    {<img src ="assets/hulubackround.jpg">}
+    <!-- <img src ="assets/hulubackround.jpg"> -->
 
     <!-- Opacity 10% & used as a backround image-->
 
@@ -32,8 +32,8 @@
   <!-- Reduce size of logo to  214 x 70-->
 
   <div class="watchBox>"
-  <h4 style="font-size: 22px;color: white;"> Watch Thousands of shows and movies, with plans starting at $5.99/month.
-  <p></p></h4>
+    <h4 style="font-size: 16px;color: white;"> Watch Thousands of shows and movies, with plans starting at $5.99/month.
+</h4>
 
     <!-- need font type as graphic < used p tag for spacing of 1 line!-- Graphik 22 px line ht 30 px white -->
     
@@ -51,11 +51,11 @@
 
   <div class="disneySection">
     <!-- Add tags and divs as needed for each element -->
-<h2>Bundle and SAve Over 25%</h2>
+<h2 style="font-size: 35px;color: black);">Bundle and Save Over 25%</h2>
 <h4>Get Hulu, Disney+, ESPN+ for $12.99/Month</h4>
 <h7>More Details
   <h4>GET Bundle</h4>
-  <h7>Terms Apply</h7>
+  <h7 style="font-size: 10px; color: white;">Terms Apply</h7>
 
   </div>
 </body2>
@@ -63,12 +63,12 @@
 
   <div class="blackAndWhite">
     <!-- Add tags and divs as needed for each element -->
-<h2>Included in all plans</h2>
-<h1>The Largest Streaming TV Library</h1>
-<h4>Stream Full seasons of Exclusive Series</h4>
+<h2 style="font-size: 25px;color: rgb(45,189,157);">Included in all plans</h2>
+<h1 style="font-size: 25px;color: rgb(45,189,157);">The Largest Streaming TV Library</h1>
+<h4 style="font-size: 25px;color: rgb(45,189,157);">Stream Full seasons of Exclusive Series</h4>
 
-<h4>Past & Current seasons</h4>
-<h2>TV Shows</h2> 
+<h4 style="font-size: 25px;color: rgb(45,189,157);">Past & Current seasons</h4>
+<h2 style="font-size: 25px;color: rgb(45,189,157);">TV Shows</h2> 
 <h4>New & Classic</h4>
 <h2>Movies</h2> 
 <h4>Groundbreaking</h4>
